<resources>
    <string name="app_name">Verbal Learning</string>
    <string name="titleboarding">Learn and Improve</string>
    <string name="bodyboarding">We are here to help people to improve\ntheir pronounciation and articulation of the\nstandard Bahasa Indonesia Speech Sounds</string>
    <string name="btn_onboarding">Masuk Sekarang</string>
    <string name="titleboarding2">Buat Profil Anda</string>
    <string name="bodyboarding2">Tulis nama profil yang Anda inginkan atau\nberi tahu kami siapa yang akan\nmenggunakan aplikasi ini</string>
    <string name="nextpage">lanjut ke halaman utama >></string>
    <string name="titleboarding3">Halo,</string>
    <string name="bodyboarding3">Yeay! Profil Anda telah lengkap\nSekarang kamu bisa menggunakan\nAplikasi Articulation Learning.</string>
    <string name="btn_onboarding3">Mulai Sekarang</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_a">
    </string>
    <string name="text_b">
        Dalam bahasa Indonesia, huruf "b" umumnya diucapkan dengan suara yang keras dan pendek. Bila berada di akhir kata, kadang dilafalkan sebagai [p]. Untuk mengucapkan huruf "b" dalam bahasa Indonesia, letakkan bibir Anda secara rapat dan kemudian keluarkan suara dengan melepaskan tekanan udara yang terperangkap di dalam mulut saat bibir terbuka. Suara yang dihasilkan harus pendek dan jelas.
    </string>
    <string name="text_c">
        Dalam bahasa Indonesia, huruf "c" umumnya diucapkan dengan suara /tʃ/. Untuk mengucapkannya, letakkan lidah Anda di belakang gigi seri atas dan lepaskan suara dengan menghasilkan hembusan udara yang terhalang oleh lidah dan gigi tersebut. Suara yang dihasilkan harus terdengar seperti kombinasi antara "t" dan "s".
    </string>
    <string name="text_d">
        Dalam bahasa Indonesia, huruf "d" umumnya diucapkan dengan suara /d/. Untuk mengucapkannya, letakkan ujung lidah Anda di belakang gigi seri atas dan lepaskan suara dengan mengeluarkan udara dengan lembut. Suara yang dihasilkan harus terdengar seperti "d" yang jelas dan tegas.
    </string>
    <string name="text_e">
    </string>
    <string name="text_f">
        Dalam bahasa Indonesia, huruf "f" umumnya diucapkan dengan suara /f/. Untuk mengucapkannya, letakkan gigi atas di atas bibir bawah dan lepaskan suara dengan menghembuskan udara dengan kuat melalui celah di antara gigi dan bibir. Suara yang dihasilkan harus terdengar seperti bunyi "f" yang tajam dan jelas.
    </string>
    <string name="text_g">
        Dalam bahasa Indonesia, huruf "g" umumnya diucapkan dengan suara /ɡ/. Untuk mengucapkannya, letakkan belakang lidah Anda di langit-langit mulut dan lepaskan suara dengan menghentikan aliran udara dan kemudian melepaskannya secara tiba-tiba. Suara yang dihasilkan harus terdengar seperti bunyi "g" yang keras dan jelas.
    </string>
    <string name="text_h">
        Dalam bahasa Indonesia, huruf "h" umumnya diucapkan dengan suara /h/. Untuk mengucapkannya, buka mulut Anda dengan lebar dan lepaskan suara tanpa hambatan udara dengan membiarkan udara keluar dari tenggorokan. Suara yang dihasilkan harus terdengar seperti hembusan napas yang halus dan lembut
    </string>
    <string name="text_i">
    </string>
    <string name="text_j">
        Dalam bahasa Indonesia, huruf "j" diucapkan dengan suara /j/. Untuk mengucapkannya, letakkan ujung lidah di belakang gigi depan atas dan lepaskan suara dengan sedikit hambatan udara.Ketika mengucapkan huruf "j", buka mulut Anda dengan lebar dan lepaskan suara dengan lembut seperti hembusan napas yang terhalus.
    </string>
    <string name="text_k">
        Dalam bahasa Indonesia, huruf "k" diucapkan dengan suara /k/. Untuk mengucapkannya, rapatkan lidah ke langit-langit mulut bagian belakang, kemudian lepaskan lidah tiba-tiba untuk menghasilkan suara /k/. Ketika mengucapkan huruf "k", buka mulut Anda dengan lebar dan lepaskan suara dengan sedikit hambatan udara untuk menghasilkan bunyi /k/ yang tegas dan jelas.
    </string>
    <string name="text_l">
        Dalam bahasa Indonesia, huruf "l" diucapkan dengan suara /l/. Untuk mengucapkannya, letakkan ujung lidah di belakang gigi depan atas dan lepaskan suara tanpa hambatan udara. Suara yang dihasilkan harus terdengar seperti /l/ dalam kata "lari" atau "lampu". Ketika mengucapkan huruf "l", buka mulut Anda dengan lebar dan biarkan suara /l/ keluar dengan lembut dan terdengar jelas.
    </string>
    <string name="text_m">
        Dalam bahasa Indonesia, huruf "m" diucapkan dengan suara /m/. Untuk mengucapkannya, rapatkan bibir bersama-sama dan lepaskan suara dengan hambatan udara yang ringan. Ketika mengucapkan huruf "m", buka mulut Anda dengan lebar dan lepaskan suara /m/ dengan bibir yang rapat untuk menghasilkan bunyi yang resonan dan jelas.
    </string>
    <string name="text_n">
        Dalam bahasa Indonesia, huruf "n" diucapkan dengan suara /n/. Untuk mengucapkannya, letakkan ujung lidah di belakang gigi depan atas dan lepaskan suara dengan hambatan udara yang ringan. Ketika mengucapkan huruf "n", buka mulut Anda dengan lebar dan biarkan suara /n/ keluar dengan lembut dan terdengar jelas.
    </string>
    <string name="text_o">
    </string>
    <string name="text_p">
        Dalam bahasa Indonesia, huruf "p" diucapkan dengan suara /p/. Untuk mengucapkannya, rapatkan bibir dan lepaskan suara dengan hambatan udara yang kuat. Suara yang dihasilkan harus terdengar seperti /p/ dalam kata "pohon" atau "pulpen". Ketika mengucapkan huruf "p", rapatkan bibir Anda dengan kuat dan lepaskan suara /p/ dengan dorongan kuat untuk menghasilkan bunyi yang tegas dan jelas.
    </string>
    <string name="text_q">
        Dalam bahasa Indonesia, huruf "q" tidak digunakan secara umum dan sangat jarang ditemui dalam kata-kata yang berasal dari bahasa Indonesia. Oleh karena itu, tidak ada cara khusus untuk mengucapkannya dalam konteks bahasa Indonesia standar. Jika Anda menemui kata yang mengandung huruf "q" dalam bahasa Indonesia, biasanya itu merupakan kata serapan dari bahasa asing seperti bahasa Inggris atau bahasa Arab, dan cara pengucapannya mengikuti aturan fonetik dari bahasa asalnya. Tidak jarang huruf “q” dibaca sama dengan huruf “k”.
    </string>
    <string name="text_r">
        Dalam bahasa Indonesia, huruf "r" umumnya diucapkan dengan suara /r/. Untuk mengucapkannya, letakkan ujung lidah di belakang gigi depan atas dan lepaskan suara dengan getaran ringan.
    </string>
    <string name="text_s">
        Dalam bahasa Indonesia, huruf "s" diucapkan dengan suara /s/. Untuk mengucapkannya, rapatkan lidah ke langit-langit mulut bagian atas dan lepaskan suara dengan hambatan udara yang ringan.Ketika mengucapkan huruf "s", buka mulut Anda dengan sedikit hambatan udara dan lepaskan suara /s/ dengan lidah yang rapat untuk menghasilkan bunyi yang jelas dan tajam.
    </string>
    <string name="text_t">
        Dalam bahasa Indonesia, huruf "t" diucapkan dengan suara /t/. Untuk mengucapkannya, rapatkan lidah ke langit-langit mulut bagian atas, kemudian lepaskan lidah secara tiba-tiba untuk menghasilkan suara /t/. Ketika mengucapkan huruf "t", buka mulut Anda dengan lebar dan lepaskan suara /t/ dengan lidah yang rapat untuk menghasilkan bunyi yang tegas dan jelas.
    </string>
    <string name="text_u">
    </string>
    <string name="text_v">
        Dalam bahasa Indonesia, tidak terdapat huruf "v" yang diucapkan dengan suara /v/ secara umum. Huruf "v" dalam bahasa Indonesia cenderung diucapkan seperti huruf "f". Contohnya, dalam kata "video" atau "versi", huruf "v" diucapkan sebagai /f/. Hal ini karena pengucapan huruf "v" dalam bahasa Indonesia telah mengalami adaptasi fonetik.
    </string>
    <string name="text_w">
        Dalam bahasa Indonesia, huruf "w" diucapkan dengan suara /w/. Untuk mengucapkannya, bibir Anda harus sedikit membentuk posisi bulat dan rapat. Lepaskan suara dengan menghembuskan udara melalui bibir yang rapat untuk menghasilkan bunyi /w/
    </string>
    <string name="text_x">
        Dalam bahasa Indonesia, tidak terdapat huruf "x" yang diucapkan secara umum. Huruf "x" dalam bahasa Indonesia cenderung diucapkan seperti huruf "ks". Contohnya, dalam kata "eksperimen" atau "eksklusif", huruf "x" diucapkan sebagai /ks/.
    </string>
    <string name="text_y">
        Dalam bahasa Indonesia, huruf "y" diucapkan dengan suara /j/. Untuk mengucapkannya, bibir Anda harus sedikit terbuka, lidah Anda harus mendekati langit mulut bagian atas. Lepaskan suara dengan mendorong udara melalui celah sempit antara lidah dan langit-langit untuk menghasilkan bunyi /j/.
    </string>
    <string name="text_z">
        Dalam bahasa Indonesia, huruf "z" diucapkan dengan suara /z/. Untuk mengucapkannya, bibir Anda harus sedikit terbuka dan lidah Anda harus menjauhi langit-langit mulut. Lepaskan suara dengan mendorong udara melalui celah sempit antara gigi dan lidah untuk menghasilkan bunyi /z/.
    </string>
    <string-array name="words_a">

    </string-array>
    <string-array name="words_b">
        <item><b>B</b>uku</item>
        <item><b>B</b>ola</item>
        <item><b>B</b>ali</item>
        <item><b>B</b>esar</item>
        <item><b>B</b>iru</item>
    </string-array>
    <string-array name="words_c">
        <item>Cicak</item>
        <item>
        Cuci</item>
        <item>
        Coklat</item>
        <item>
        Cinta</item>
        <item>
        Cerah</item>
    </string-array>
    <string-array name="words_d">
        <item>Doa</item>
        <item>
        Dinding</item>
        <item>
        Duduk</item>
        <item>
        Daging</item>
        <item>
        Domba</item>

    </string-array>
    <string-array name="words_f">
        <item>Foto</item>
        <item>
        Fajar</item>
        <item>
        Fakta</item>
        <item>
        Flora</item>
        <item>
        Fungsi</item>

    </string-array>
    <string-array name="words_g">
        <item>Garpu</item>
        <item>
        Gitar</item>
        <item>
        Gajah</item>
        <item>
        Gelas</item>
        <item>
        Gula</item>

    </string-array>
    <string-array name="words_h">
        <item>Hutan</item>
        <item>
        Hati</item>
        <item>
        Hidup</item>
        <item>
        Hewan</item>
        <item>
        Hobi</item>
    </string-array>
    <string-array name="words_j">
        <item>Jalan</item>
        <item>
        Jatuh</item>
        <item>
        Jual</item>
        <item>
        Jembatan</item>
        <item>
        Jerapah</item>
    </string-array>
    <string-array name="words_k">
        <item>Kursi</item>
        <item>
        Kamera</item>
        <item>
        Kucing</item>
        <item>
        Kayu</item>
        <item>
        Kaki</item>

    </string-array>
    <string-array name="words_l">
        <item>Lampu</item>
        <item>
        Lukisan</item>
        <item>
        Laut</item>
        <item>
        Lompat</item>
        <item>
        Lemari</item>
    </string-array>
    <string-array name="words_m">
        <item>Meja</item>
        <item>
        Mobil</item>
        <item>
        Musik</item>
        <item>
        Makan</item>
        <item>
        Matahari</item>
    </string-array>
    <string-array name="words_n">
        <item>Nama</item>
        <item>
        Nenek</item>
        <item>
        Novel</item>
        <item>
        Nelayan</item>
        <item>
        Nasi</item>
    </string-array>
    <string-array name="words_p">
        <item>Puisi</item>
        <item>
        Pohon</item>
        <item>
        Pesawat</item>
        <item>
        Perpustakaan</item>
        <item>
        Pantai</item>
    </string-array>
</resources>