<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A176"
    tools:context=".Onboarding3">

    <TextView
        android:id="@+id/text_titleboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/inter_extralight"
        android:text="@string/titleboarding3"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bodyboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:text="@string/bodyboarding3"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_titleboarding" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifOnboarding"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyboarding" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_btn_masuksekarang"
        android:drawableEnd="@drawable/ic_arrow"
        android:fontFamily="@font/inter_bold"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/btn_onboarding3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifOnboarding" />
</androidx.constraintlayout.widget.ConstraintLayout>